// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rest commodities endpoint should return success 1`] = `
{
  "data": {
    "result": 98.91,
  },
  "result": 98.91,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
    "providerIndicatedTimeUnixMs": 1514764861000,
  },
}
`;

exports[`rest crypto endpoint should return success 1`] = `
{
  "data": {
    "result": 50940.12,
  },
  "result": 50940.12,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
    "providerIndicatedTimeUnixMs": 1638898619885,
  },
}
`;

exports[`rest eod endpoint should return success 1`] = `
{
  "data": {
    "result": 26.3,
  },
  "result": 26.3,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
    "providerIndicatedTimeUnixMs": 1628884800000,
  },
}
`;

exports[`rest etf endpoint should return success 1`] = `
{
  "data": {
    "result": 118.78,
  },
  "result": 118.78,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
    "providerIndicatedTimeUnixMs": 1685972473955,
  },
}
`;

exports[`rest forex endpoint should return success 1`] = `
{
  "data": {
    "result": 1.3443049999999999,
  },
  "result": 1.3443049999999999,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
    "providerIndicatedTimeUnixMs": 1637060382000,
  },
}
`;

exports[`rest stock endpoint should return success 1`] = `
{
  "data": {
    "result": 26.060000000000002,
  },
  "result": 26.060000000000002,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
    "providerIndicatedTimeUnixMs": 1628899200621,
  },
}
`;

exports[`rest uk etf endpoint should return success 1`] = `
{
  "data": {
    "result": 445.64,
  },
  "result": 445.64,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1652198967193,
    "providerDataRequestedUnixMs": 1652198967193,
    "providerIndicatedTimeUnixMs": 1685972473955,
  },
}
`;
